# LSTM-time-series-prediction

./: .gitignore  .python-version  LICENSE  README.md  makefile  model.pth  pyproject.toml  requirements.dev.txt  requirements.txt  scaler.pkl  setup.py
Dockerfiles/api/: Dockerfile
data/data_ingestion/: vivo3_processed.csv  vivo_ingested.csv  vivo_processed.csv
examples/: test_request.json
notebooks/gmferratti/: acoes_vivo.csv  exploring_data.ipynb  scaler_X.pkl  scaler_y.pkl
notebooks/mauricio/: ingest_data.ipynb
src/: config.py  makefile  run.py
src/api/: main.py  mock_model.py
src/data_ingestion/: ingest_data.py
src/data_preprocessing/: constants.py  custom_classes.py  preprocess.py  utils.py
src/model/: train.py
src/modeling/: train_evaluate.py  utils.py
