[project]
name = "lstm-time-series-prediction"
version = "0.1.0"
description = "Modelo preditivo de LSTM para previsão de preços de ações utilizando PyTorch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "mlflow>=2.17.2",
    "ruff>=0.7.3",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "uvicorn>=0.32.0",
    "yfinance>=0.2.49",
    ipykernel>=6.29.5,
    pandas>=2.2.3,
    typing-extensions>=4.12.2,
    sympy>=1.13.3,
    matplotlib>=3.9.2,
    requests >= 2.32.3,
    bs4 >= 0.0.2,
    frozendic>=2.4.6,
    multitasking>=0.0.11,
    peewee>=3.17.,
    pandas-market-calendars>=4.4.2
]

[tool.ruff]
line-length = 102
select = ["E", "F", "W", "C", "R"]
exclude = ["__init__.py", "notebooks/"]