[project]
name = "lstm-time-series-prediction"
version = "0.1.0"
description = "Modelo preditivo de LSTM para previsão de preços de ações utilizando PyTorch."
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 102
select = ["E", "F", "W", "C", "R"]
exclude = ["__init__.py", "notebooks/"]

[tool.black]
line-length = 102
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 102